se fixea bug de focus en la spacebar y se agrega texto

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <main>
         <h1>😎Paletly! - Generador de Paletas de colores para tus proyectos.🤳</h1>
         
-        <p>Apretá [<button class="generator-button">La barra espaciadora o hacé click acá</button>] para generar de forma aleatoria la paleta</p>
-
+        <p>Uso: [<button class="generator-button">hacé click acá</button>] para generar de forma aleatoria la paleta</p>
+        <p>Tip: Apretá en el 🔒 para lockear el color que te guste y seguí generando otros!</p>
 
         <h4>Generados:</h4>
 
